--- a/css/base/layout.css
+++ b/css/base/layout.css
@@ -15,11 +15,18 @@
     width: 1%;
 }
 
-.w1of1 {
-    width: 100%;
-}
+.w1of1 { width: 100%; }
+.w1of2 { width: 50%; }
+.w1of3 { width: 33.33333%; }
+.w2of3 { width: 66.66666%; }
+.w1of4 { width: 25%; }
+.w3of4 { width: 75%; }
+.w1of5 { width: 20%; }
+.w2of5 { width: 40%; }
+.w3of5 { width: 60%; }
+.w4of5 { width: 80%; }
 
-/* 20em (320px) */
+/* 20em = 320px */
 
 @media (max-width: 20em) {
     .flow-xs.row,
@@ -31,10 +38,10 @@
     }
 }
 
-/* 30em (480px) */
+/* 30em = 480px */
 
 @media (max-width: 30em) {
-    .small.row,
+    .flow-s.row,
     .flow-s .row,
     .flow-s .col {
         display: block;
@@ -43,7 +50,7 @@
     }
 }
 
-/* 48em (768px) */
+/* 48em = 768px */
 
 @media (max-width: 48em) {
     .flow-m.row,
@@ -55,9 +62,9 @@
     }
 }
 
-/* 68.75em (1100px) */
+/* 64em = 1024px */
 
-@media (max-width: 68.75) {
+@media (max-width: 64em) {
     .flow-l.row,
     .flow-l.row,
     .flow-l .col {
@@ -67,9 +74,9 @@
     }
 }
 
-/* 81.25em (1300px) */
+/* 80em = 1280px */
 
-@media (max-width: 81.25em) {
+@media (max-width: 80em) {
     .flow-xl.row,
     .flow-xl.row,
     .flow-xl .col {
