--- a/css/base/layout.css
+++ b/css/base/layout.css
@@ -4,16 +4,31 @@
 */
 
 .row {
-    margin-right: -20px;
+    max-width: 980px;
+    margin: 0 auto 10px auto;
     overflow: auto;
+}
+
+.row .row {
+    margin: 0 -10px;
 }
 
 .col {
     float: left;
-    padding-right: 20px;
+    padding: 0 10px;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
+}
+
+.full {
+    max-width: 100%;
+}
+
+.full .col {
+    max-width: 980px;
+    margin: 0 auto;
+    float: none;
 }
 
 /* width helpers */
