--- a/css/layout.css
+++ b/css/layout.css
@@ -77,6 +77,15 @@ html, body {
     background-size: auto 130%;
 }
 
+.no-select {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
 /* vertical align */
 
 .t {
@@ -106,4 +115,49 @@ html, body {
     left: 0;
     bottom: 0;
     right: 0;
+}
+
+/* 20em = 320px */
+
+@media (max-width: 20em) {
+    .flow-xs.col,
+    .flow-xs .col {
+        width: 100%;
+    }
+}
+
+/* 30em = 480px */
+
+@media (max-width: 30em) {
+    .flow-s.col,
+    .flow-s .col {
+        width: 100%;
+    }
+}
+
+/* 48em = 768px */
+
+@media (max-width: 48em) {
+    .flow-m.col,
+    .flow-m .col {
+        width: 100%;
+    }
+}
+
+/* 64em = 1024px */
+
+@media (max-width: 64em) {
+    .flow-l.col,
+    .flow-l .col {
+        width: 100%;
+    }
+}
+
+/* 80em = 1280px */
+
+@media (max-width: 80em) {
+    .flow-xl.col,
+    .flow-xl .col {
+        width: 100%;
+    }
 }
