--- a/css/layout.css
+++ b/css/layout.css
@@ -86,6 +86,12 @@ html, body {
     user-select: none;
 }
 
+.box { 
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+}
+
 /* vertical align */
 
 .t {
@@ -99,7 +105,14 @@ html, body {
     vertical-align: middle;
 }
 
-/* aspect ratio (9/16)*100 = 56.25 */
+/* tall aspect ratio */
+
+.tall {
+    height: 100%;
+    overflow-y: auto;
+}
+
+/* wide aspect ratio (9/16)*100 = 56.25 */
 
 .wide {
     position: relative;
