--- a/css/banner.css
+++ b/css/banner.css
@@ -4,10 +4,17 @@
 
 .banner {
     background-color: #000;
-    padding: 3em 0 0 0;
+    background-image: url(../img/alley.jpg);
+    background-size: cover;
+    margin: 3em 0 0 0;
 }
 
-.banner img {
-    display: block;
-    max-width: 100%;
+.banner .inner {
+    background-color: #000;
+    background-color: rgba(0, 0, 0, 0.2);
+}
+
+.banner .title {
+    color: #fff;
+    margin: 0;
 }
