--- a/css/layout.css
+++ b/css/layout.css
@@ -9,6 +9,10 @@ body,
     margin: 0;
 }
 
+body {
+    background-color: #f6f6f6;
+}
+
 .main {
     box-sizing: border-box;
     padding-top: 3em;
